<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/panel_background"
    android:elevation="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="5dp">

    <ImageButton
        android:id="@+id/btnCollapseOverlayToolbar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/floating_collapse_button_background"
        android:contentDescription="@string/collapse_toolbar"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_minus_symbol"
        android:tint="@android:color/white" />

    <LinearLayout
        android:id="@+id/overlayButtonsStrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnTurnOffOverlay"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/floating_icon_button_background"
            android:contentDescription="@string/toggle_overlay"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_power_symbol"
            android:tint="@android:color/white" />

        <Space
            android:layout_width="6dp"
            android:layout_height="1dp" />

        <ImageButton
            android:id="@+id/btnGoHome"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/floating_special_button_background"
            android:contentDescription="@string/go_home"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home_symbol"
            android:tint="@android:color/white" />

        <Space
            android:layout_width="6dp"
            android:layout_height="1dp" />

        <ImageButton
            android:id="@+id/btnOpenOverlaySettings"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/floating_icon_button_background"
            android:contentDescription="@string/tune"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_gear_symbol"
            android:tint="@android:color/white" />
    </LinearLayout>
</LinearLayout>
